<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hexagon Wallpaper</string>
    <string name="service_label">Hexagon Wallpaper</string>
    <string name="description">Based on Super Hexagon. Super Hexagon (C) Terry Cavanagh</string>
    
    <string name="settings">Settings</string>
	<string name="settings_wallpaper">Wallpaper Settings</string>
	<string name="settings_links">Links</string>

	<string name="buy">Get Super Hexagon</string>
	<string name="buy_desc">Seriously. Do it. It\'s awesome.</string>
	<string name="contact">Comments/Questions</string>
	<string name="contact_desc">\@Suyo_ on Twitter</string>

	<string name="colors_title">Colors</string>
	<string name="colors_summary">Which level the wallpaper should look like</string>
	<string-array name="colors_entries">
		<item>Hexagon</item>
		<item>Hyper Hexagon</item>
		<item>Unique Hexagon</item>
		<item>Hexagoner</item>
		<item>Hyper Hexagoner</item>
		<item>Unique Hexagoner</item>
		<item>Hexagonest</item>
		<item>Hyper Hexagonest</item>
		<item>The End (Unique Hexagonest)</item>
	</string-array>
	<string-array name="colors_entriesV">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
	</string-array>

	<string name="perspective_title">Perspective</string>
	<string name="perspective_summary">Viewing Angle</string>
	<string-array name="perspective_entries">
		<item>0° (straight down)</item>
		<item>11°</item>
		<item>22°</item>
		<item>Changing</item>
	</string-array>
	<string-array name="perspective_entriesV">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>-1</item>
	</string-array>

	<string name="zoom_title">Zoom</string>
	<string name="zoom_summary">Viewing Distance</string>
	<string-array name="zoom_entries">
		<item>Close</item>
		<item>Far</item>
		<item>Changing</item>
	</string-array>
	<string-array name="zoom_entriesV">
		<item>0</item>
		<item>1</item>
		<item>-1</item>
	</string-array>
	
	<string name="pulse_title">Pulse</string>
	<string name="pulse_summary">Center Hexagon Pulse and Wall Spawn Rate</string>
	<string-array name="pulse_entries">
		<item>Off</item>
		<item>Frequent</item>
		<item>Normal</item>
		<item>Rare</item>
	</string-array>
	<string-array name="pulse_entriesV">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>

	<string name="rotation_title">Rotation</string>
	<string name="rotation_summary">Camera Rotation</string>
	<string-array name="rotation_entries">
		<item>Off</item>
		<item>Clockwise</item>
		<item>Counter-clockwise</item>
		<item>Changing</item>
	</string-array>
	<string-array name="rotation_entriesV">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>-1</item>
	</string-array>

	<string name="walls_title">Walls</string>
	<string name="walls_summary">Amount and Speed of Walls</string>
	<string-array name="walls_entries">
		<item>Off</item>
		<item>Slow</item>
		<item>Medium</item>
		<item>Fast</item>
	</string-array>
	<string-array name="walls_entriesV">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>

    <string name="cursor_title">Cursor</string>
    <string name="cursor_summary">Adds an AI cursor trying to dodge walls</string>
    <string-array name="cursor_entries">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string-array name="cursor_entriesV">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
